--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "author": "Rahul S Mayuranath",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^1.6.11",
-    "eslint": "^4.1.1",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.1.2",
-    "eslint-plugin-react": "^7.1.0",
-    "prettier": "^1.5.2",
-    "prettier-eslint": "^6.4.2"
+    "babel-core": "^6.24.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "electron": "^1.6.2",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^1.5.0",
+    "eslint-plugin-prettier": "^2.0.1",
+    "prettier": "^0.22.0"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0"
   }
 }
