--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "babel-register": "^6.24.0",
     "electron": "^1.6.2",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
     "eslint-config-prettier": "^1.5.0",
     "eslint-plugin-prettier": "^2.0.1",
     "prettier": "^0.22.0"
   },
   "dependencies": {
+    "electron": "^1.6.11",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0"
